tests/machine/x/c/string_compare.error
line: 0
error: output mismatch
-- got --
-314941436
-314941436
-314941436
-314941436
-- want --
true
true
true
true
   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:53Z
