tests/machine/x/c/string_compare.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:53Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

int main() {
  printf("%d\n", ((strcmp("a", "b") < 0)) ? "true" : "false");
  printf("%d\n", ((strcmp("a", "a") <= 0)) ? "true" : "false");
  printf("%d\n", ((strcmp("b", "a") > 0)) ? "true" : "false");
  printf("%d\n", ((strcmp("b", "b") >= 0)) ? "true" : "false");
  return 0;
}
